<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list"
        android:title="@string/list"/>

    <item
        android:id="@+id/navigation_classification"
        android:icon="@drawable/ic_classificationnew"
        android:title="@string/classification"/>

    <item
        android:id="@+id/navigation_database"
        android:icon="@drawable/ic_database"
        android:title="@string/database"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_fragment"
        android:title="@string/location"/>

</menu>