<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PersonActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_person" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/person_s_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson"
        app:layout_constraintStart_toStartOf="@+id/ivPerson"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson" />

    <TextView
        android:id="@+id/idUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/id_user"
        android:fontFamily="@font/montserratmedium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/personName"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <Button
        android:id="@+id/ubahPasswordButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ubah_password"
        app:layout_constraintEnd_toEndOf="@+id/personName"
        app:layout_constraintStart_toStartOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/idUser" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="@+id/ubahPasswordButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ubahPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/ubahPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>