<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.classification.PanduanActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPanduan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panduan_foto"
        android:fontFamily="@font/montserratbold"
        android:textSize="32sp"
        android:textColor="@color/darkgreen"
        app:layout_constraintBottom_toTopOf="@+id/ivPanduan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPanduan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/panduan_photo" />

    <TextView
        android:id="@+id/tvPerhatikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:text="@string/perhatikan_background"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPanduan"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/description_panduan"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerhatikan" />

    <ImageView
        android:id="@+id/mulaiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@drawable/mulai_button" />

</androidx.constraintlayout.widget.ConstraintLayout>